# RunningManager

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOW-TO-AGENTS.md  LICENSE  PR_DESCRIPTION.md  README.md  TODO.md  app.py  config.py  data_pipeline.md  pyproject.toml  requirements.txt  test_elevation_chart.py
.taskmaster/: config.json  state.json
data/: .strava_state  AGENTS.md  activities.csv  activities_metrics.csv  athlete.csv  daily_metrics.csv  links.csv  planned_metrics.csv  planned_sessions.csv  race-pacing-link.csv  races.csv  session_templates.csv  settings.csv  strava_api_log.json  thresholds.csv  weekly_metrics.csv
divers/: .~lock.10k-bastille.csv#  10k-bastille.csv  10k-bastille.ods  30km - LUT By Night .gpx  Marathon de rome.gpx  trail-du-gresivaudan-2026.gpx  trail-du-lac-de-paladru-2026-ultra-trail-du-pays-voironnais-85-km-uyn.gpx
docs/: DATA_FLOW.md  PUBLIC_RELEASE_GUIDE.md  REFACTORING_ANALYSIS.md  edit_log.md  pacer_pipeline.md  production_readiness.md  pydeck.md  rebuild_cache_pipeline.md
graph/: AGENTS.md  __init__.py  analytics.py  elevation.py  hr_cluster.py  hr_speed.py  hr_zones.py  pacer_comparison.py  pacer_segments.py  qq_lines.py  redi.py  speed_profile.py  speed_scatter.py  timeseries.py  training_load.py
notebooks/: elevation_grade.ipynb  record_speed_profil.ipynb
pages/: AGENTS.md  Activities.py  Activity.py  Analytics.py  Athlete.py  Dashboard.py  Goals.py  Planner.py  RacePacing.py  Session.py  SessionCreator.py  Settings.py
persistence/: AGENTS.md  __init__.py  csv_storage.py  repositories.py
ui/: AGENTS.md  (+2 more)
(+466 files in other folders)
